// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeedGraderHeader anonymizes the avatar and name 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.context.button"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "height": 40,
                "marginLeft": 16,
                "width": 40,
              }
            }
          >
            <Avatar
              avatarURL=""
              key="4"
              userName="Student"
            />
          </View>
          <View
            style={
              Object {
                "flexDirection": "column",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              accessibilityTraits="header"
              style={
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                }
              }
            >
              Student
            </Text>
            <SubmissionStatusLabel
              status="submitted"
            />
          </View>
        </View>
      </TouchableHighlight>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#008EE2",
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader doesnt show the group name when anonymous 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.context.button"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "height": 40,
                "marginLeft": 16,
                "width": 40,
              }
            }
          >
            <Avatar
              avatarURL=""
              key="4"
              userName="Group"
            />
          </View>
          <View
            style={
              Object {
                "flexDirection": "column",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              accessibilityTraits="header"
              style={
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                }
              }
            >
              Group
            </Text>
            <SubmissionStatusLabel
              status="submitted"
            />
          </View>
        </View>
      </TouchableHighlight>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#008EE2",
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with a grade-only submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.context.button"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "height": 40,
                "marginLeft": 16,
                "width": 40,
              }
            }
          >
            <Avatar
              avatarURL="https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg"
              key="4"
              userName="Allura"
            />
          </View>
          <View
            style={
              Object {
                "flexDirection": "column",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              accessibilityTraits="header"
              style={
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                }
              }
            >
              Allura
            </Text>
            <SubmissionStatusLabel
              status="none"
            />
          </View>
        </View>
      </TouchableHighlight>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#008EE2",
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with a group submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.groupList.button"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "height": 40,
                "marginLeft": 16,
                "width": 40,
              }
            }
          >
            <Avatar
              avatarURL="https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg"
              key="4"
              userName="Allura"
            />
          </View>
          <View
            style={
              Object {
                "flexDirection": "column",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              accessibilityTraits="header"
              style={
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                }
              }
            >
              Allura
            </Text>
            <SubmissionStatusLabel
              status="submitted"
            />
          </View>
        </View>
      </TouchableHighlight>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#008EE2",
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with a submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.context.button"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "height": 40,
                "marginLeft": 16,
                "width": 40,
              }
            }
          >
            <Avatar
              avatarURL="https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg"
              key="4"
              userName="Allura"
            />
          </View>
          <View
            style={
              Object {
                "flexDirection": "column",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              accessibilityTraits="header"
              style={
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                }
              }
            >
              Allura
            </Text>
            <SubmissionStatusLabel
              status="submitted"
            />
          </View>
        </View>
      </TouchableHighlight>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#008EE2",
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with an over-due grade-only submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.context.button"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "height": 40,
                "marginLeft": 16,
                "width": 40,
              }
            }
          >
            <Avatar
              avatarURL="https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg"
              key="4"
              userName="Allura"
            />
          </View>
          <View
            style={
              Object {
                "flexDirection": "column",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              accessibilityTraits="header"
              style={
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                }
              }
            >
              Allura
            </Text>
            <SubmissionStatusLabel
              status="missing"
            />
          </View>
        </View>
      </TouchableHighlight>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#008EE2",
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with no submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.context.button"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "height": 40,
                "marginLeft": 16,
                "width": 40,
              }
            }
          >
            <Avatar
              avatarURL="https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg"
              key="4"
              userName="Allura"
            />
          </View>
          <View
            style={
              Object {
                "flexDirection": "column",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              accessibilityTraits="header"
              style={
                Object {
                  "fontSize": 16,
                  "fontWeight": "600",
                }
              }
            >
              Allura
            </Text>
            <SubmissionStatusLabel
              status="none"
            />
          </View>
        </View>
      </TouchableHighlight>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "white",
          "marginRight": 12,
        }
      }
    >
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="header.navigation-done"
        underlayColor="white"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#008EE2",
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            Done
          </Text>
        </View>
      </TouchableHighlight>
    </View>
  </View>
</View>
`;
